# tidegal-client

./: README.md  tidegal-client.cabal
app/: Main.hs
src/Tide/Client/: Init.hs  Input.hs  Network.hs  Render.hs
src/Tide/Client/Render/: Resource.hs  Shader.hs
